--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cognito UI</title>
+    <title>DE Africa Sign Up</title>
+    <link rel="icon" href="%PUBLIC_URL%/deafrica-favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
